# cargo-bike-analysis

./: .gitignore  README.md  pyproject.toml
config/: paper.yaml
data/geovex/: clusters_4.parquet  clusters_5.parquet  target_tags.txt
data/model_results/: boston_hex_quants_citywide_preds.csv  boston_hex_quants_kring_preds.csv
data/osm/austin/: austin_h3.parquet
data/osm/boston/: boston_h3.parquet
data/osm/brussels/: brussels_h3.parquet
data/osm/chicago/: chicago_h3.parquet
data/osm/london/: london_h3.parquet  london_postcode_boundary.geojson
data/population/: README.md
data/service_time/: brussels_service_time.parquet  london_service_time.parquet
notebooks/: test_dataloader.ipynb
notebooks/baseline_models/: test.ipynb
notebooks/city_analysis/: urban_regions_analysis.ipynb
notebooks/embeddings/: train_geovex.ipynb  train_geovex_shadeform.ipynb  train_hex2vec.ipynb
notebooks/regression/: PRIORITY_Across_Cities_Analysis.ipynb  PRIORITY_Bike_Van_Predictions_KS_Joint_Models.ipynb  amazon_experiments.ipynb  regression.ipynb  simple_test.ipynb
notebooks/statistical_analysis/: amazon_round_analysis.ipynb  brussels.ipynb  parking_distance.ipynb  service_time_tables.ipynb  travel_time_analysis.ipynb
scripts/: get_almrcc.py  get_city_osm.py  make_amazon_table.py
src/: config.py  latex_tables.py  load_data.py  osm_tags.py  polars.py  urban_tools.py
src/amazon/: json.py
src/models/: baseline.py  conformal.py  dataset.py  eval.py  xgboostlss.py
src/plot/: cities.py  clusters.py
src/srai_patches/: dataset.py
src/travel_time/: bing.py
(+7 files in other folders)
