[project]
name = "Cargo-Bike-Analysis"
version = "0.0.1"
description = ""
authors = [
    {name = "Max Schrader, Nico Collignon, Navish Kumar", email = "mcschrader@crimson.ua.edu"},
]
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "polars>=0.19.8",
    "pytorch-lightning>=2.1.0",
    "omegaconf>=2.3.0",
    "osmnx>=1.7.0",
    "osmium>=3.6.0",
    "ipykernel>=6.25.2",
    "wandb>=0.15.12",
    "boto3>=1.28.64",
    "geopolars>=0.1.0a4",
    "scikit-learn>=1.3.1",
    "branca>=0.6.0",
    "folium>=0.14.0",
    "plotly>=5.17.0",
    "mapclassify>=2.6.1",
    "matplotlib>=3.8.0",
    "nbconvert>=7.9.2",
    "ngboost>=0.3.12",
    "xgboost>=2.0.0",
    "srai[all]>=0.5.1",
    "urbanity>=0.3.6",
    "ipyleaflet>=0.17.4",
    "seaborn>=0.13.1",
    "contextily>=1.5.0",
    "scienceplots>=2.1.1",
    "scikit-posthocs>=0.8.1",
    "pandas>=2.2.0",
]
requires-python = ">=3.9,<3.11"
